tank movement + start of cannon following mouse

--- a/tanks-and-tron/tanks-and-tron.csproj
+++ b/tanks-and-tron/tanks-and-tron.csproj
@@ -9,13 +9,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="cannon.png" />
     <None Remove="Sudoku.png" />
+    <None Remove="tank.png" />
     <None Remove="tanks.jpg" />
     <None Remove="tron.jpg" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="cannon.png" />
     <Resource Include="Sudoku.png" />
+    <Resource Include="tank.png" />
     <Resource Include="tanks.jpg" />
     <Resource Include="tron.jpg" />
   </ItemGroup>
