--- a/tanks-and-tron/tanks-and-tron.csproj
+++ b/tanks-and-tron/tanks-and-tron.csproj
@@ -11,6 +11,8 @@
   <ItemGroup>
     <None Remove="bullet.png" />
     <None Remove="cannon.png" />
+    <None Remove="player_cannon.png" />
+    <None Remove="player_tank.png" />
     <None Remove="Sudoku.png" />
     <None Remove="tank.png" />
     <None Remove="tanks.jpg" />
@@ -18,8 +20,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="player_cannon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="bullet.png" />
     <Resource Include="cannon.png" />
+    <Resource Include="player_tank.png" />
     <Resource Include="Sudoku.png" />
     <Resource Include="tank.png" />
     <Resource Include="tanks.jpg" />
